Fixed sub-menu being a pixel too big

--- a/vcs/static/style.css
+++ b/vcs/static/style.css
@@ -269,6 +269,7 @@ nav .parent ul li
     float: none;
     margin:0;
     padding:0;
+    min-width: 119px;
 }
 nav .parent ul li a
 {
